@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #58, change writeFile functions to MonadIO
 0.15.6
     Require the primitive package
     #431, make it an error to need a directory
